# RustVNC

./: .gitignore  .gitmodules  NOTICE  README.md  RUST_MIGRATION.md  encoding_comparison.md
app/: build.gradle  lint-baseline.xml
app/src/main/java/net/christianbeier/droidvnc_ng/: InputService.java  MainService.java
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs  turbojpeg.rs  vnc_jni.rs
app/src/main/rust/src/vnc/: client.rs  encoding.rs  framebuffer.rs  mod.rs  protocol.rs  repeater.rs  server.rs
app/src/main/rust/src/vnc/encoding/: tight.rs  zlib.rs  zrle.rs  zywrle.rs
