# Cargo.toml

[package]
name = "droidvnc-ng"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "droidvnc_ng"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
android_logger = "0.15"

# JNI bindings
jni = "0.21"
once_cell = "1.19"

# VNC Server dependencies
bytes = "1.5"
byteorder = "1.5"
thiserror = "2.0"
flate2 = "1.0"  # zlib compression
jpeg-encoder = "0.6"  # Pure Rust JPEG compression for Tight encoding
des = "0.8"  # DES encryption for VNC authentication
rand = "0.8"  # Random number generation for challenge
